@@ -1,7 +1,6 @@
 " Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
 
 ProtoObject < #Object
-
 - initialize
 	"Subclasses should redefine this method to perform initializations on instance creation"
 
@@ -20,3 +19,18 @@ ProtoObject < #Object
 - at: index put: value
     "Primitive.  Assuming the object is indexable, set the value at index."
     <primitive: 61>
+
+"testing"
+- class
+	<primitive: 111>
+	
+- isKindOf: aClass
+	self class == aClass
+		ifTrue: [ ^ true ]
+		ifFalse: [ ^ self class inheritsFrom: aClass ].
+		
+- isMemberOf: aClass
+	^ self class == aClass.
+
+- respondsTo: aSymbol
+	^ self class canUnderstand: aSymbol.
